@@ -99,9 +99,9 @@
             <type>string</type>
             <default>&lt;Alt&gt;F1</default>
             <locale name="C">
-                <short>Main Menu</short>
+                <short>Show Main Menu</short>
                 <long>
-                    Open main menu
+                    Show the main menu
                 </long>
             </locale>
         </schema>
@@ -631,7 +631,7 @@
             <type>string</type>
             <default>&lt;Control&gt;&lt;Alt&gt;d</default>
             <locale name="C">
-                <short>Show Desktop</short>
+                <short>Hide all windows and focus desktop</short>
                 <long>
                     Hide all windows and focus desktop
                 </long>
