@@ -1,0 +1,8 @@
+*.gmo
+*.mo
+*.pot
+Makefile
+Makefile.in
+Makefile.in.in
+POTFILES
+.intltool-merge-cache
